[package]
name = "mpc-zk-paillier"
version = "0.1.0"
edition = "2021"
description = "Integrative project on cryptographic primitives for #mpc #zk and #fhe for educational purposes. Using groups of small elliptic curves"
license = "GPL-3.0-or-later"
repository = "https://github.com/manudev97/mpc-zk-paillier"
categories = ["cryptography", "algorithms"]
keywords = ["zk", "mpc", "tss", "paillier", "homomorphic", "encryption", "zero-knowledge", "cryptographic"]

authors = [
    "Enmanuel Cabrera <manudevcabrera@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"
sha2 = "0.10.8"
